--- a/src/pages/filippa.astro
+++ b/src/pages/filippa.astro
@@ -1,8 +1,12 @@
 ---
 import Menu from '../components/Menu.astro';
-import Section1 from '../components/Section1.astro';
+import SectionOne from '../components/SectionOne.astro';
+import MainButton from '../components/MainButton.astro';
+import SecondaryButton from '../components/SecondaryButton.astro';
+import SectionFour from '../components/SectionFour.astro'
 
 ---
 
-<Menu>
-<Section1>
+<Menu></Menu>
+<SectionOne></SectionOne>
+    <SectionFour>
