--- a/src/pages/filippa.astro
+++ b/src/pages/filippa.astro
@@ -4,9 +4,13 @@ import SectionOne from '../components/SectionOne.astro';
 import MainButton from '../components/MainButton.astro';
 import SecondaryButton from '../components/SecondaryButton.astro';
 import SectionFour from '../components/SectionFour.astro'
+import SectionFive from '../components/SectionFive.astro'
+
 
 ---
 
 <Menu></Menu>
 <SectionOne></SectionOne>
-    <SectionFour>
+    <SectionFour></SectionFour>
+        <SectionFive>
+
