--- a/src/components/SectionFive.astro
+++ b/src/components/SectionFive.astro
@@ -1,4 +1,6 @@
+<div class="padding">
 <h1>Vores magiske værdier</h1>
+</div>
 <hr style="width: 1400px; border: 0; border-top: 1px solid #000; margin: 0 auto; opacity: 0.4;">
 
 <div class="grid_1-1-1-1">
@@ -28,18 +30,24 @@
 <style>
 
     img {
-        width: 100%;
+        width: 90%;
     }
     .grid_1-1-1-1 {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr 1fr;
-        padding: 3%;
+        padding: 5%;
         padding-left: 10%;
         padding-right: 10%;
         gap: 10%;
-        text-align: center;
 
     }
+
+   
+
+    .padding {
+        padding-left: 5%;
+    }
+
 
 
 
