--- a/src/pages/maja.astro
+++ b/src/pages/maja.astro
@@ -1,15 +1,29 @@
+---
+import Section2 from "../components/Section2.astro";
+import Section3 from "../components/Section3.astro";
+import Section7 from "../components/Section7.astro";
 
-	<body>
+---
+<html lang="da">
+	<head>
+		<meta charset="utf-8" />
+		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<meta name="viewport" content="width=device-width" />
+		<meta name="generator" content={Astro.generator} />
+		<title>Astro</title>
+	</head>
+	
 
 
-		<section class="section2">
-        <h2>Klovne sko</h2>
-        <h3>Varianter</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt perspiciatis ipsum doloribus debitis dolorem
-            </p>
 
-    </section>
+<Section2>
+ 
+</Section2>
 
+<Section3>
+    
+</Section3>
 
+<Section7>
 
-	</body>
+</Section7>
