--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -42,15 +42,20 @@
 
    <style>
 
+
 body {
-    padding: 0;
-    margin: 0;
+    padding: -10px;
+    margin: -10px;
+    
+
 }
 
 .background {
     background-color: #87B8FD;
-    margin-bottom: 0;
-    padding-bottom: 0;
+    margin-bottom: 10px;
+    padding-bottom: 10px;
+    padding-top: 10px;
+
 
 }
 
@@ -82,10 +87,15 @@ body {
         cursor: pointer;
         transition: opacity 0.2s ease;
         color: #FFFDEF;
+        font-family: IonicMTW04-Regular;
+        padding: 3%;
+
     }
 
     .doner {
         color: #E56F00;
+        font-family: IonicMTW04-Regular;
+
 
     }
 
