--- a/src/components/MainButton.astro
+++ b/src/components/MainButton.astro
@@ -9,7 +9,9 @@
         cursor: pointer;
         transition: background-color 0.3s ease;
         color: black;
-        font-weight: lighter;
+        font-family: "Helvetica Neue";
+font-style: normal;
+font-weight: 200;
         font-size: 1rem;
 
     }
