--- a/src/components/SectionEight.astro
+++ b/src/components/SectionEight.astro
@@ -2,12 +2,13 @@
     <img src="/public/img/section8.png" alt="section8" class="background-image">
     <div class="overlay">
         <h1>Støt allerede i dag</h1>
-        <p>Med et vilkårligt beløb, og vær med til at give syge og sårbare børn magiske stunder og glimt af glæde og smil.</p>
+        <p>Med et vilkårligt beløb, og vær med til at give syge og sårbare børn <br> magiske stunder og glimt af glæde og smil.</p>
         <img src="/public/img/pig.png" alt="pig" class="pig">
     </div>
 </div>
 
 <style>
+
 body {
     padding: 0;
     margin: 0;
@@ -16,6 +17,9 @@ body {
 .container {
     position: relative;
     width: 100%;
+    padding: 0;
+    margin: 0;
+    background-color: #87B8FD;
 }
 
 .background-image {
@@ -42,6 +46,28 @@ body {
     margin-top: 20px;
     animation: bounce 2s infinite ease-in-out;
     cursor: pointer;
+
+}
+
+h1 {
+    color: #FFFDEF;
+   margin-left: 0%;
+   font-family: IonicMTW04-Regular;
+   font-size: 42px;
+   font-style: normal;
+   font-weight: 400;
+   line-height: 120%; /* 50.4px */
+   }
+
+   p {
+ color: #FFFDEF;
+text-align: center;
+font-family: "Helvetica Neue";
+font-size: 16px;
+font-style: normal;
+font-weight: 300;
+line-height: 160%; /* 25.6px */
+text-align: center;
 
 }
 
