--- a/src/components/SecondaryButton.astro
+++ b/src/components/SecondaryButton.astro
@@ -1,3 +1,7 @@
+---
+import SectionEight from '../components/SectionEight.astro';
+---
+
 <button class="mainbutton"><slot/></button>
 
 <style>
@@ -9,8 +13,10 @@
         cursor: pointer;
         transition: background-color 0.3s ease;
         color: #FFFDEF;
-        font-weight: lighter;
         font-size: 1rem;
+        font-family: "Helvetica Neue";
+font-style: normal;
+font-weight: 200;
 
     }
     .mainbutton:hover {
