--- a/src/components/Section2.astro
+++ b/src/components/Section2.astro
@@ -1,8 +1,9 @@
 
+
 <section class="magi-for-smil">
   <h1 class="section2_h1">Magi for smil</h1>
 
-<hr style="width: 1200px; border: 0; border-top: 1px solid #000; margin: 0 auto; opacity: 0.4;">
+  <hr style="width: 1400px; border: 0; border-top: 1px solid #000; margin: 0 auto; opacity: 0.4;">
  
 <div class="grid-container_s2">
     <div class="grid-item">
@@ -25,20 +26,23 @@
   </div>
 </section>
 
-<img src="/public/img/maskgroup.png" alt="barn">
+<img src="/public/img/maskgroup.png" alt="barn" class="barn">
 
 <style>
 
 
 
+
+
 .section2_h1 {
  color: #000;
-margin-left: 8%;
+margin-left: 5%;
 font-family: IonicMTW04-Regular;
 font-size: 42px;
 font-style: normal;
 font-weight: 400;
 line-height: 120%; /* 50.4px */
+padding-top: 2%;
 }
 
 .highlight {
@@ -72,6 +76,12 @@ line-height: 160%;
 .img3 {
   width: 150px; /* Mindre størrelse for dette billede */
   height: auto;
+}
+
+.barn {
+margin: 0;
+padding: 0;
+width: 100%;
 }
 
 
