--- a/src/components/Section7.astro
+++ b/src/components/Section7.astro
@@ -24,15 +24,16 @@
 
 
   <style>
+
 .section7_h1 {
-    padding-top: 8%;
+    padding-top: 12%;
 color: #000;
 text-align: center;
 font-family: IonicMTW04-Regular;
 font-size: 42px;
 font-style: normal;
 font-weight: 400;
-line-height: 120%; /* 50.4px */
+line-height: 10%; /* 50.4px */
 }
 
 .grid-container_s7 {
@@ -71,6 +72,10 @@ font-weight: 300;
 line-height: 160%; /* 25.6px */
 padding-left: 15%;
 max-width: 60%;
+}
+
+.magi-for-smil {
+  padding-bottom: 7%;
 }
 
 
