--- a/src/components/SectionFive.astro
+++ b/src/components/SectionFive.astro
@@ -29,6 +29,7 @@
 
 <style>
 
+
     img {
         width: 90%;
     }
@@ -39,6 +40,7 @@
         padding-left: 10%;
         padding-right: 10%;
         gap: 10%;
+        padding-bottom: 12%;
 
     }
 
@@ -47,6 +49,39 @@
     .padding {
         padding-left: 5%;
     }
+
+    h1 {
+    color: #000;
+   margin-left: 0%;
+   font-family: IonicMTW04-Regular;
+   font-size: 42px;
+   font-style: normal;
+   font-weight: 400;
+   line-height: 120%; /* 50.4px */
+   }
+
+   h2 {
+    color: #000;
+   margin-left: 8%;
+   font-family: IonicMTW04-Regular;
+   font-size: 28px;
+   font-style: normal;
+   font-weight: 400;
+   line-height: 120%; /* 50.4px */
+   text-align: center;
+   }
+
+   p {
+ color: #000;
+text-align: center;
+font-family: "Helvetica Neue";
+font-size: 14px;
+font-style: normal;
+font-weight: 300;
+line-height: 160%; /* 25.6px */
+text-align: center;
+
+}
 
 
 
