--- a/src/components/SectionOne.astro
+++ b/src/components/SectionOne.astro
@@ -15,6 +15,8 @@ html, body {
     width: 100%;
     height: 100%;
     margin-top: 5%;
+    background-color: #FFFDEF;
+
 }
 
 
@@ -27,7 +29,7 @@ html, body {
 
 .herotext {
     color: #000;
-    font-family: 'Times New Roman', Times, serif;
+    font-family: IonicMTW04-Regular;
     font-size: 42px;
 font-style: normal;
 font-weight: 400;
@@ -37,7 +39,7 @@ margin-top: 82px;
 }
 .herotext2 {
     color: #000;
-font-family: 'Times New Roman', Times, serif;
+font-family: IonicMTW04-Regular;
 font-size: 32px;
 font-style: normal;
 font-weight: 400;
@@ -53,4 +55,6 @@ margin-bottom: 74px;
     margin: 0;
     padding: 0;
 }
+
+
 </style>
