--- a/src/pages/styles/style.css
+++ b/src/pages/styles/style.css
@@ -1,16 +1,36 @@
-
-
-   * {
-    background-color: #FFFDEF;
-    margin: 0;
-    padding: 0;
-    max-width: 1300px;
-    
-
-   }
-
-  html, body {
-    overflow-x: hidden; /* Döljer horisontell scroll */
-    margin: 0; /* Tar bort oönskade marginaler */
-    padding: 0; /* Tar bort oönskade padding */
+body {
+    padding: -10px;
+    margin: -10px;
 }
+
+img.squiggle {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 200vw;
+    z-index: -10;
+}
+
+/* Style the header: fixed position (always stay at the top) */
+.header {
+    position: fixed;
+    top: 0;
+    z-index: 10;
+    width: 100%;
+    background-color: #FFFDEF;
+  }
+  
+  /* The progress container (grey background) */
+  .progress-container {
+    width: 100%;
+    height: 5px;
+    background: #FFFDEF;
+  }
+  
+  /* The progress bar (scroll indicator) */
+  .progress-bar {
+    height: 5px;
+    background: #87B8FD;
+    width: 0%;
+  }
