--- a/src/components/SectionOne.astro
+++ b/src/components/SectionOne.astro
@@ -3,7 +3,7 @@
         <h2 class="herotext2">Vi tryller for håbet om smil.</h2>
 
         <video muted loop class="herovid blurred" id="heroVideo">
-            <source src="/public/img/herovid.mp4" type="video/mp4">
+            <source src="img/herovid.mp4" type="video/mp4">
         </video>
 
 
