--- a/src/components/Menu.astro
+++ b/src/components/Menu.astro
@@ -6,7 +6,7 @@ import SecondaryButton from '../components/SecondaryButton.astro';
 
     <nav class="menu">
         <div class="logo">
-            <img src="/public/img/logo1.png" alt="Logo" id="logoImg">
+            <img src="img/logo1.png" alt="Logo" id="logoImg">
         </div>
         <div class="menu-buttons">
             <div id="omos">
